--- a/Application/Common/Builder/formbuilder.html
+++ b/Application/Common/Builder/formbuilder.html
@@ -53,17 +53,17 @@
 
 <div class="builder">
     <div class="row">
-        <notempty name="tab_list">
+        <notempty name="tab_nav">
             <div class="col-xs-12 margin-bottom">
                 <ul class="nav nav-tabs">
-                    <volist name="tab_list" id="tab">
-                        <li class="<php>if($current_tab == $key) echo 'active';</php>"><a href="{:U($tab_url, array('tab' => $key))}">{$tab}</a></li>
+                    <volist name="tab_nav.tab_list" id="tab">
+                        <li class="<php>if($tab_nav['current_tab'] == $key) echo 'active';</php>"><a href="{$tab.href}">{$tab.title}</a></li>
                     </volist>
                 </ul>
             </div>
         </notempty>
         <div class="col-xs-12">
-            <form action="{$url}" method="post" class="form builder-form">
+            <form action="{$post_url}" method="post" class="form builder-form">
                 <volist name="form_items" id="form" key="k">
                     <div class="form-group item_{$form.name} {$form.extra_class}">
                         <php>if($form['type'] != 'group' && $form['type'] != 'hidden'):</php>
@@ -909,9 +909,9 @@
                     </div>
                 </volist>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block submit ajax-post visible-xs visible-sm" type="submit" target-form="builder-form">确 定</button>
-                    <button class="btn btn-primary submit ajax-post visible-md-inline visible-lg-inline" type="submit" target-form="builder-form">确 定</button>
-                    <button class="btn btn-default return visible-md-inline visible-lg-inline" onclick="javascript:history.back(-1);return false;">返 回</button>
+                    <button class="btn btn-primary btn-block submit ajax-post visible-xs visible-sm" type="submit" target-form="builder-form">确定</button>
+                    <button class="btn btn-primary submit ajax-post visible-md-inline visible-lg-inline" type="submit" target-form="builder-form">确定</button>
+                    <button class="btn btn-default return visible-md-inline visible-lg-inline" onclick="javascript:history.back(-1);return false;">返回</button>
                 </div>
             </form>
         </div>
