优化：系统模块相关优化 修复：ListBuilder总是显示暂时没有数据

--- a/Application/Common/Builder/listbuilder.html
+++ b/Application/Common/Builder/listbuilder.html
@@ -47,7 +47,7 @@
                         </volist>
                     </tbody>
                 </table>
-                <empty name="data_list">
+                <empty name="table_data_list">
                     <div class="text-center clearfix">暂时没有数据～</div>
                 </empty>
                 <notempty name="table_data_page">
