重构：前台模块前端架构 删除：第三方类库多余的点开头文件

--- a/Application/Common/Builder/formbuilder.html
+++ b/Application/Common/Builder/formbuilder.html
@@ -118,6 +118,11 @@
                                 <!-- 图标 -->
                                 <case value="icon">
                                     <input id="icon_{$k}" type="text" class="form-control input icon-choosen icon icon-one" name="{$form.name}" value="{$form.value}" {$form.extra_attr}>
+                                    <script type="text/javascript">
+                                        $(function(){
+                                            $("#icon_{$k}").iconChoosen({});
+                                        });
+                                    </script>
                                 </case>
                                 <!-- 日期 -->
                                 <case value="date">
