--- a/Application/Common/Builder/widget/picture.html
+++ b/Application/Common/Builder/widget/picture.html
@@ -14,7 +14,7 @@
                 onUploadComplete:function(file, data){
                     var data = $.parseJSON(data);
                     if(data.error == 1){
-                        $.bootstrapGrowl(data.message);
+                        alertMessager(data.message, 'danger');
                     }else{
                         $('#[type]{$group_k}_preview_{$[type]k} img').attr('src', data.url);
                         $('#[type]{$group_k}_preview_{$[type]k} input').attr('value', data.id);
