--- a/Application/Common/Builder/widget/files.html
+++ b/Application/Common/Builder/widget/files.html
@@ -23,7 +23,7 @@
                 onUploadComplete:function(file, data){
                     var data = $.parseJSON(data);
                     if(data.error == 1){
-                        alertMessager(data.message, 'danger');
+                        $.alertMessager(data.message, 'danger');
                     }else{
                         var new_file = '<li class="list-group-item file-item" data-id="'+data.id+'"><i class="fa fa-file"></i> '
                                        +data.name+' <i class="fa fa-remove-sign remove-file"></i></li>'
@@ -41,7 +41,7 @@
             $('#[type]{$group_k}_preview_{$[type]k} .remove-file').click(function(){
                 var ready_for_remove_id = $(this).closest('.file-item').attr('data-id'); //获取待删除的文件ID
                 if(!ready_for_remove_id) {
-                    alertMessager('错误', 'danger');
+                    $.alertMessager('错误', 'danger');
                 }
                 var current_file_ids = $('#[type]{$group_k}_preview_{$[type]k} input').val().split(","); //获取当前文件列表以逗号分隔的ID并转换成数组
                 current_file_ids.remove(ready_for_remove_id); //从数组中删除待删除的文件ID
