--- a/Application/Common/Builder/widget/pictures.html
+++ b/Application/Common/Builder/widget/pictures.html
@@ -19,7 +19,7 @@
                 onUploadComplete:function(file, data){
                     var data = $.parseJSON(data);
                     if(data.error == 1){
-                        alertMessager(data.message, 'danger');
+                        $.alertMessager(data.message, 'danger');
                     }else{
                         var input = $('#[type]{$group_k}_preview_{$[type]k} input');
                         var new_img = '<span class="img-box"><img class="img img-responsive" src="' + data.url + '" data-id="'+data.id+'"><i class="fa fa-remove-sign remove-picture"></i></span>';
@@ -36,7 +36,7 @@
             $('#[type]{$group_k}_preview_{$[type]k} .remove-picture').click(function(){
                 var ready_for_remove_id = $(this).closest('.img-box').find('img').attr('data-id'); //获取待删除的图片ID
                 if(!ready_for_remove_id){
-                    alertMessager('错误', 'danger');
+                    $.alertMessager('错误', 'danger');
                 }
                 var current_picture_ids = $('#[type]{$group_k}_preview_{$[type]k} input').val().split(","); //获取当前图集以逗号分隔的ID并转换成数组
                 current_picture_ids.remove(ready_for_remove_id); //从数组中删除待删除的图片ID
