--- a/Application/Common/Builder/widget/files.html
+++ b/Application/Common/Builder/widget/files.html
@@ -6,7 +6,7 @@
             <notempty name="[type]form.value">
                 <?php $files = explode(',',$[type]form['value']); ?>
                 <foreach name="files" item="file">
-                    <li class="list-group-item file-item" data-id="{$file}"><i class="fa fa-file"></i> {$file|get_upload_info='name'} <i class="fa fa-remove-sign remove-file"></i></li>
+                    <li class="list-group-item file-item" data-id="{$file}"><i class="fa fa-file"></i> {$file|get_upload_info='name'} <i class="fa fa-times-circle remove-file"></i></li>
                 </foreach>
             </notempty>
         </ul>
@@ -26,7 +26,7 @@
                         $.alertMessager(data.message, 'danger');
                     }else{
                         var new_file = '<li class="list-group-item file-item" data-id="'+data.id+'"><i class="fa fa-file"></i> '
-                                       +data.name+' <i class="fa fa-remove-sign remove-file"></i></li>'
+                                       +data.name+' <i class="fa fa-times-circle remove-file"></i></li>'
                         $('#[type]{$group_k}_preview_{$[type]k} .list-group').append(new_file);
                         var input = $('#[type]{$group_k}_preview_{$[type]k} input');
                         if(input.val() != ''){
