--- a/Application/Common/Builder/widget/file.html
+++ b/Application/Common/Builder/widget/file.html
@@ -2,9 +2,13 @@
     <div id="[type]{$group_k}_upload_{$[type]k}" {$form.extra_attr}></div>
     <div id="[type]{$group_k}_preview_{$[type]k}">
         <input type="hidden" name="{$[type]form.name}" value="{$[type]form.value}">
-        <ul class="list-group margin-top">
+        <ul class="list-group file-box">
             <notempty name="[type]form.value">
-                <li class="list-group-item"><i class="fa fa-file"></i> {$[type]form.value|get_upload_info='name'}</li>
+                <li class="list-group-item file-item" data-id="{$[type]form.value}">
+                    <i class="fa fa-file"></i> 
+                    <span>{$[type]form.value|get_upload_info='name'}</span>
+                    <i class="fa fa-times-circle remove-file"></i>
+                </li>
             </notempty>
         </ul>
     </div>
@@ -27,6 +31,15 @@
                     }
                 }
             });
+        });
+        //删除文件
+        $('#[type]{$group_k}_preview_{$[type]k} .remove-file').click(function(){
+            var ready_for_remove_id = $(this).closest('.file-item').attr('data-id'); //获取待删除的文件ID
+            if(!ready_for_remove_id) {
+                $.alertMessager('错误', 'danger');
+            }
+            $('#[type]{$group_k}_preview_{$[type]k} input').val('') //删除后覆盖原input的值为空
+            $(this).closest('.file-item').remove(); //删除文件预览
         });
     </script>
 </case>
